# Realtime-Mandarin-to-English-Audio-Translation-Pipeline

./: README.md  run.bat
python_ml_server/: requirements.txt  server.py
rust_audio_client/: Cargo.toml
rust_audio_client/src/: audio.rs  main.rs  network.rs
